@@ -1,3 +1,12 @@
+2004-12-21  JP Rosevear  <jpr@novell.com>
+
+	* calendar/e-cal-backend-exchange-calendar.c: update for
+	remove/modify api changes
+
+	* calendar/e-cal-backend-exchange-tasks.c: ditto
+
+	* calendar/e-cal-backend-exchange.c: ditto	
+	
 2004-12-20  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* configure.in : Bumped the version to 2.1.2
